crates/rome_formatter/tests/specs/prettier/typescript/decorators-ts/multiple.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: multiple.ts

---
# Input
```js
class C {
  @f()
  @g()
  method() {}
}

```

# Output
```js
class C {
  @
  f();
  @
  g();
  method() {}
}

```

# Errors
```
error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
  ┌─ multiple.ts:2:3
  │
2 │   @f()
  │   ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
  ┌─ multiple.ts:3:3
  │
3 │   @g()
  │   ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here


```


